--- a/서울범죄 현황 시각화.ipynb
+++ b/서울범죄 현황 시각화.ipynb
@@ -13,7 +13,8 @@
     "import numpy as np\n",
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings('ignore')"
+    "warnings.filterwarnings('ignore')\n",
+    "#"
    ]
   },
   {
